permission repository, service, endpoints (swagger included)
